--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Font explorer</title>
   </head>
   <body style="background-color: #c1c1c1;">
     <div id="app"></div>
