switch to preact and emotion

--- a/index.html
+++ b/index.html
@@ -8,8 +8,5 @@
     <div id="app"></div>
   </body>
 
-  <script>
-    // You can also require other files to run in this process
-    require('./dist/renderer.js')
-  </script>
+  <script src="./dist/app.js"></script>
 </html>
